--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,9 +63,13 @@ h3 {
 }
 
 .hover-scale {
-    @apply transition ease-in-out hover:scale-105;
+    @apply transition ease-in-out hover:scale-105 hover:shadow-md;
 }
 
 a {
     @apply underline underline-offset-4 hover:text-blue-500;
+}
+
+hr {
+    @apply border-2 border-blue-500 bg-blue-500 md:w-80 w-5/6 my-3;
 }
